tests/base/parser/bad/lib/lmodule-library-cid-type-cid-eq-with.scillib
scilla_version 0

library TestLib

(* missing bar *)
type House =
Kind of String
